--- a/public/index.html
+++ b/public/index.html
@@ -4,10 +4,11 @@
 <meta content="utf-8" http-equiv="encoding">
 <link href="css/tree.css" rel="stylesheet" type="text/css"/>
 <script src="js/goog/base.js" type="text/javascript"></script>
-<script src="js/iiiiioiooooo.js" type="text/javascript"></script>
+<script src="js/main.js" type="text/javascript"></script>
 </head>
 <body id="body">
 <div id="root"><div/></div>
 <script type="text/javascript">goog.require("iiiiioiooooo.ui");</script>
+<script type="text/javascript">iiiiioiooooo.ui.make_ui();</script>
 </body>
 </html>
