--- a/public/index.html
+++ b/public/index.html
@@ -2,13 +2,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"><head><title>iiiiioiooooo</title>
 <meta content="utf-8" http-equiv="encoding">
-<link href="css/tree.css" rel="stylesheet" type="text/css"/>
-<script src="js/goog/base.js" type="text/javascript"></script>
-<script src="js/main.js" type="text/javascript"></script>
+<style type="text/css"></style>
 </head>
 <body id="body">
 <div id="root"><div/></div>
-<script type="text/javascript">goog.require("iiiiioiooooo.ui");</script>
-<script type="text/javascript">iiiiioiooooo.ui.make_ui();</script>
+<script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
