eval working, style

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <meta content="utf-8" http-equiv="encoding">
 </head>
 <body id="body">
-<div id="root"><div/></div>
+<div class="sexp"><div class="sexp"/></div>
 <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
